# pca_example

./: README.md  datos.py  ejemplo_completo_con_optimizacion.py  ejemplo_pca.py  n_componentes.py  pyproject.toml
