[tool.poetry]
name = "pca-example"
version = "0.1.0"
description = ""
authors = ["fjet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.40"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
